<resources>
    <string name="app_name">Diary of a College Kid</string>
    <string name="action_settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="audio">Audio</string>
    <string name="gallery">Gallery</string>
    <string name="gps">GPS</string>
    <string name="new_entry">New Entry</string>
    <string name="entry_title_hint">Title</string>
    <string name="entry_body_hint">entry</string>
    <string name="entry_keyowrds_hint">keywords</string>
    <string name="entry_keywords_hint">keywords</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_image_dialog_message">Remove selected image from journal entry?</string>
    <string name="remove_image_dialog_title">Remove Image</string>
    <string name="remove_video_dialog_title">Remove Video</string>
    <string name="remove_video_dialog_message">Remove selected video from journal entry?</string>
    <string name="video">Video</string>
    <string name="replace_media_dialog_message">Do you want to replace the current media in journal entry?</string>
    <string name="replace_media_dialog_title">Replace Media</string>
    <string name="action_save">Save</string>
    <string name="discard_entry_dialog_message">Discard current journal entry?</string>
    <string name="discard_entry_dialog_title">Discard Entry</string>
    <string name="cancel">Cancel</string>
    <string name="sort">Sort</string>
    <string name="menu_sort_title_asc">Title (A - Z)</string>
    <string name="menu_sort_title_desc">Title (Z - A)</string>
    <string name="menu_sort_date_asc">Date (Old - New)</string>
    <string name="menu_sort_date_desc">Date (New - Old)</string>
    <string name="remove_audio_dialog_message">Remove speech audio from entry?</string>
    <string name="remove_audio_dialog_title">Remove Audio</string>
    <string name="remove_gps_dialog_message">Remove GPS Location from entry?</string>
    <string name="remove_gps_dialog_title">Remove Location</string>
    <string name="action_edit">Edit</string>
    <string name="entry_activity">Entry</string>
</resources>
