<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_photo_camera_24dp"
        android:orderInCategory="100"
        android:title="@string/camera"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_video"
        android:icon="@drawable/ic_videocam_24dp"
        android:orderInCategory="100"
        android:title="@string/video"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_gallery"
        android:icon="@drawable/ic_photo_library_24dp"
        android:orderInCategory="100"
        android:title="@string/gallery"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_audio"
        android:icon="@drawable/ic_mic_24dp"
        android:orderInCategory="100"
        android:title="@string/audio"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_gps"
        android:icon="@drawable/ic_my_location_24dp"
        android:orderInCategory="100"
        android:title="@string/gps"
        app:showAsAction="always" />
</menu>
