<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Entry"
    tools:showIn="@layout/entry">

    <!-- View Layout -->
    <ScrollView
        android:id="@+id/entry_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Image Layout -->
            <ImageView
                android:id="@+id/entry_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <!-- Video Layout -->
            <VideoView
                android:id="@+id/entry_video"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <!-- Text Layout -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <!-- Body Layout -->
                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/entry_body_holder"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@+id/date_title_holder"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin">

                    <EditText
                        android:id="@+id/entry_body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:background="@android:color/transparent"
                        android:hint="@string/entry_body_hint"
                        android:inputType="textMultiLine|textCapSentences|textNoSuggestions"
                        android:maxHeight="200dp"
                        android:padding="8dp"
                        android:scrollbars="vertical" />

                </android.support.v7.widget.CardView>

                <!-- Audio Playback Layout -->
                <LinearLayout
                    android:id="@+id/entry_audio_playback_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/entry_body_holder"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/audio_play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_play_arrow_24dp" />

                    <ImageView
                        android:id="@+id/audio_pause"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_pause_24dp"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/audio_stop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_stop_24dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/audio_file_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="MM-dd-yyyy_HH-mm-ss.3pg" />


                </LinearLayout>

                <!-- Date and Title Layout -->
                <LinearLayout
                    android:id="@+id/date_title_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Date Layout -->
                    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/entry_date_holder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:clickable="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="4dp">

                            <TextView
                                android:id="@+id/weekday"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal" />

                            <TextView
                                android:id="@+id/month"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal" />

                            <TextView
                                android:id="@+id/day"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:textSize="40sp" />

                            <TextView
                                android:id="@+id/year"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal" />

                            <TextView
                                android:id="@+id/time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <!-- Title Layout -->
                    <EditText
                        android:id="@+id/entry_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@android:color/transparent"
                        android:hint="@string/entry_title_hint"
                        android:inputType="textCapWords"
                        android:nextFocusForward="@id/entry_body"
                        android:singleLine="true"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <!-- Keyword Layout -->
                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/entry_keywords_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/entry_audio_playback_holder"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin">

                    <EditText
                        android:id="@+id/entry_keywords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:background="@android:color/transparent"
                        android:hint="@string/entry_keywords_hint"
                        android:padding="8dp"
                        android:singleLine="true"
                        android:textColor="#36000000" />

                </android.support.v7.widget.CardView>

            </RelativeLayout>

            <!-- Map View-->
            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/entry_map"
                android:name="science.anthonyalves.diaryofacollegekid.fragments.ScrollMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                tools:context=".Entry" />

        </LinearLayout>
    </ScrollView>


    <!-- Toolbar Layout -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/bottom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <android.support.v7.widget.ActionMenuView
                android:id="@+id/bot_tb_menu"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

</LinearLayout>